<resources>
    <!--Facebook api keys -->
    <string name="facebook_app_id">993971107420951</string>
    <string name="fb_login_protocol_scheme">fb993971107420951</string>

    <string name="app_name">Beer Here</string>
    <string name="title_text">Welcome to Beer Here!</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_out">You have not yet signed in.</string>
    <string name="sign_in_error">Error Signing in.</string>
    <string name="hello">Hello %1$s!</string>
    <string name="date_of_birth">Date Of Birth:</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="home_country">Home Country:</string>
    <string name="Home_country_spinner">Home Country</string>
    <string name="submit">Submit</string>
    <string name="title_activity_beers_page">BeersPage</string>
    <string name="title_activity_favourites_page">FavsPage</string>
    <string name="add_beer">Add a new Beer</string>
    <string name="beer_name">Beer Name:</string>
    <string name="country">Country of Origin:</string>
    <string name="beer_name_hint">Name of Beer</string>
    <string name="upload_image">Upload Image</string>
    <string name="dialog_message">Message</string>
    <string name="dialog_title">Title</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="camera_permission">Camera Permission is needed to use the camera.</string>
    <string name="write_permission">External storage is needed to use the camera.</string>
    <string name="permission_not_granted">Permission was not granted.</string>
    <string name="fill_required_fields">Please fill out all required fields</string>
    <string name="nav_home">Home</string>
    <string name="nav_submissions">Your Submissions </string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_countries">Countries</string>
    <string name="uploading_image">Uploading...</string>
    <string name="uploading_image_failed">Uploading content failed.</string>
    <string name="uploading_image_success">Uploaded!</string>
    <string name="upvote_success">Upvote Successful!</string>
    <string name="upvote_fail">Error - you have already upvoted this beer</string>
    <string name="downvote_fail">Error - you have already downvoted this beer</string>
    <string name="no_beer">This country does not have any beers - submit one!</string>
    <string name="no_favorites">You don\'t have any favorites yet - star one!</string>
    <string name="underage">Error - You are not old enough to drink in this country!</string>
    <string name="no_submissions">You have not yet submitted any beers.</string>
    <string name="unsupported_country">Beer Here does not yet support your country - please select a country from the drop down.</string>
</resources>
